--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "3.3.6",
     "jquery": "2.2.3",
     "normalize.css": "^7.0.0",
+    "owl.carousel": "^2.2.0",
     "react": "15.0.2",
     "react-dom": "15.0.2",
     "react-redux": "4.4.5",
