--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
   "dependencies": {
     "babel-polyfill": "6.8.0",
     "bootstrap": "3.3.6",
+    "country-select-js": "^1.0.8",
     "jquery": "2.2.3",
     "normalize.css": "^7.0.0",
     "owl.carousel": "^2.2.0",
     "react": "15.0.2",
+    "react-country-select": "^1.0.5",
     "react-dom": "15.0.2",
     "react-redux": "4.4.5",
     "react-router": "2.4.0",
@@ -59,6 +61,7 @@
     "express": "4.13.4",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
+    "image-webpack-loader": "^3.3.1",
     "jsdom": "8.5.0",
     "mocha": "2.4.5",
     "nock": "8.0.0",
